--- a/client/src/components/Header2.css
+++ b/client/src/components/Header2.css
@@ -23,15 +23,23 @@
     width: 40%;
 }
 
-.logo {
-    font-size: 7vh;
-    /* margin-left: 2%; */
-    width: 50%;
-    height: 50%;
-    padding: 5px;
-    margin: 0px 0px 0px 30px;
+.logoLink
+{
     text-decoration: none;
-    color: black;
+}
+
+.logo {
+    font-size: 5vh;
+    /* margin-left: 2%; */
+    width: 100%;
+    height: 50%;
+    padding: 10px;
+    margin: 0px 0px 0px 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+    background-color: rgb(100, 122, 143);
+    color: rgb(255, 255, 255);
 }
 .logo2 {
     display: none;
@@ -39,14 +47,14 @@
     height: 100.13333px;
 }
 .logo:hover {
-    color: black;
+    color: rgba(37, 52, 66, 0.795);;
 }
 
 .linkCont {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     padding-right: 4%;
-    width: 50%;
+    width: 33%;
 }
 
 .smallLinkCont {
@@ -75,7 +83,7 @@
     /* background-color: #9BC78E; */
     border-radius: 8px;
     /* #c4d6dc; */
-    color: black;
+    /* color: black; */
     text-decoration: none;
     /* background-position: 0 -100%; */
 }
@@ -90,11 +98,11 @@
 .headerLink:hover {
     /* background-image: linear-gradient(to bottom, white 40%, rgb(201, 196, 196) 60%); */
     /* background-color: rgba(38, 116, 189, 0.288); */
-    background-color: rgba(155, 199, 142, 0.5);
+    background-color: rgba(142, 171, 199, 0.795);
     padding: 10px 20px 10px 20px;
-    border-radius: 20px;
+    border-radius: 8px;
     /* #c4d6dc; */
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     /* background-position: 0 -100%; */
 }
