--- a/client/src/components/Recipes.css
+++ b/client/src/components/Recipes.css
@@ -1,8 +1,12 @@
+
+
 .innerContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 70%;
+    background-color: rgb(248, 248, 248);
+    border-radius: 4px;
+    width: 80%;
 }
 
 .outerCard {
@@ -12,9 +16,11 @@
     align-items: center;
     border-radius: 4px;
     padding: 10px;
-    border: solid 2px rgb(221, 221, 221);
+    /* border: solid 2px rgb(221, 221, 221); */
+    box-shadow: -5px 5px 15px 2px rgb(190, 190, 190);
     width: 30%;
-    margin: 10px;
+    margin: 20px;
+    height: 300px;
     background-color: hsl(209, 18%, 50%);
 
 }
@@ -27,7 +33,8 @@
     padding: 10px;
     border: solid 2px rgb(243, 243, 243);
     width: 90%;
-    margin: 10px;
+    /* margin: 10px; */
+    height: 50%;
     background-color: white
 }
 
@@ -35,15 +42,20 @@
 {
     color: white;
     text-align: center;
+    margin: 5px 0px 10px 0px;
 }
 
 .infoCont
 {
     width: 40%;
-    background-color: grey;
+    padding: 10px;
+    margin: 150px 0px 20px 0px;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
 }
 
 .infoText
 {
+    color: rgb(26, 26, 26);
     text-align: center;
 }
