--- a/client/src/components/Recipes.css
+++ b/client/src/components/Recipes.css
@@ -21,7 +21,7 @@
     width: 30%;
     margin: 20px;
     height: 300px;
-    background-color: hsl(209, 18%, 50%);
+    background-color: hsl(209, 30%, 65%);
 
 }
 
@@ -33,8 +33,9 @@
     padding: 10px;
     border: solid 2px rgb(243, 243, 243);
     width: 90%;
+    border-radius: 4px;
     /* margin: 10px; */
-    height: 50%;
+    height: 80%;
     background-color: white
 }
 
@@ -48,14 +49,14 @@
 .infoCont
 {
     width: 40%;
-    padding: 10px;
-    margin: 150px 0px 20px 0px;
-    border-radius: 4px;
-    background-color: rgb(255, 255, 255);
+    padding: 10px 200px 10px 200px;
+    margin: 150px 0px 0px 0px;
+    border-radius: 4px 4px 0px 0px;
+    background-color: hsl(209, 18%, 20%);
 }
 
 .infoText
 {
-    color: rgb(26, 26, 26);
+    color: rgb(247, 247, 247);
     text-align: center;
 }
