--- a/client/src/components/Recipes.css
+++ b/client/src/components/Recipes.css
@@ -47,6 +47,41 @@
     text-align: center;
 }
 
+.recipeLink
+{
+    text-decoration: none;
+    color: white;
+    padding: 5px 10px 5px 10px;
+    margin: 10px;
+    border-radius: 8px;
+    box-shadow: 0px 3px 10px 1px rgb(165, 165, 165);
+    background-color: hsl(209, 80%, 45%);
+}
+
+.recipeLink:hover
+{
+    background-color: hsl(209, 80%, 35%);
+    transition: .5s;
+}
+
+.likesButton
+{
+    padding: 10px 10px 10px 10px;
+    font-size: 17px;
+    border: rgb(206, 206, 206);
+    background-color: hsl(0, 0%, 93%);
+    border-radius: 4px;
+}
+
+.likesButton:hover
+{
+    background-color: hsl(0, 0%, 83%);
+    cursor: pointer;
+    transition: .5s;
+}
+
+
+
 .cardHeader2
 {
     color: white;
