--- a/client/src/components/Recipes.css
+++ b/client/src/components/Recipes.css
@@ -23,7 +23,9 @@
     box-shadow: -5px 5px 15px 2px rgb(190, 190, 190);
     width: 20%;
     margin: 20px;
-    height: 200px;
+    height: 20vh;
+    min-height: 300px;
+    max-height: 500px;
     background-color: hsl(209, 30%, 65%);
 
 }
@@ -31,19 +33,28 @@
 .innerCard {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     padding: 10px;
     border: solid 2px rgb(243, 243, 243);
     width: 90%;
     border-radius: 4px;
     /* margin: 10px; */
-    height: 80%;
+    height: 100%;
     background-color: white
+}
+
+.innerCard > div
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .recipeText
 {
+    margin: 10px 0px 0px 0px;
     text-align: center;
 }
 
@@ -51,7 +62,7 @@
 {
     text-decoration: none;
     color: white;
-    padding: 5px 10px 5px 10px;
+    padding: 10px 15px 10px 15px;
     margin: 10px;
     border-radius: 8px;
     box-shadow: 0px 3px 10px 1px rgb(165, 165, 165);
@@ -79,8 +90,6 @@
     cursor: pointer;
     transition: .5s;
 }
-
-
 
 .cardHeader2
 {
