--- a/client/src/components/Header2.css
+++ b/client/src/components/Header2.css
@@ -90,8 +90,9 @@
 
 .headerLink {
     font-family: 'Lato', sans-serif;
+    text-align: center;
     font-weight: 100;
-    font-size: 3.5vh;
+    font-size: 2.7vh;
     transition: 0.3s;
 }
 
